sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:10: error: illegal start of simple expression
                       } 
                       ^